gitops/platform/opensearch-dashboards/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opensearch-dashboards
  namespace: platform-opensearch
spec:
  selector:
    app: opensearch-dashboards
  ports:
    - name: http
      port: 5601
      targetPort: 5601
