gitops/platform/opensearch-dashboards/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opensearch-dashboards
  namespace: platform-opensearch
spec:
  ingressClassName: traefik
  rules:
  - host: dashboard.wazlab.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: opensearch-dashboards
            port:
              number: 5601
